--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <nav>
-        <div class="set-time">30 sec</div>
-        <div class="set-time">1 min</div>
-        <div class="set-time">5 min</div>
-        <div class="set-time">30 min</div>
-        <div class="set-time">1 hr</div>
+        <div class="set-time" data-time="0:30">30 sec</div>
+        <div class="set-time" data-time="1:00">1 min</div>
+        <div class="set-time" data-time="5:00">5 min</div>
+        <div class="set-time" data-time="30:00">30 min</div>
+        <div class="set-time" data-time="1:00:00">1 hr</div>
         <input type="text" id="enter-time" placeholder="Enter time">
     </nav>
 
