--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="set-time" data-time="01:00">1 min</div>
         <div class="set-time" data-time="05:00">5 min</div>
         <div class="set-time" data-time="30:00">30 min</div>
-        <div class="set-time" data-time="1:00:00">1 hr</div>
+        <div class="set-time" data-time="60:00">1 hr</div>
         <input type="text" id="enter-time" placeholder="Enter time">
     </nav>
 
@@ -23,5 +23,6 @@
     </div>
 
     <script src="app.js"></script>
+    <script src="add_times.js"></script>
 </body>
 </html>
