--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div id="return-time"></div>
     </div>
 
-    <script src="app.js"></script>
-    <script src="add_times.js"></script>
+    <script src="script.js"></script>
+    <!-- <script type="module">'add_times.js'</script> -->
 </body>
 </html>
