--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="set-time" data-time="300">5 min</div>
         <div class="set-time" data-time="1800">30 min</div>
         <div class="set-time" data-time="3600">1 hr</div>
-        <input type="text" id="enter-time" placeholder="Enter time">
+        <input type="number" id="enter-time" placeholder="Enter minutes">
     </nav>
 
     <div id="display">
